initial shell config

--- a/templates/config.toml.erb
+++ b/templates/config.toml.erb
@@ -1,6 +1,7 @@
 [template]
 src = "<%= @name %>.tmpl"
 dest = "/etc/nubis-config/<%= @name %>.<%= @format %>"
+prefix = "<%= @prefix %>"
 keys = [
-    "<%= @prefix %>",
+    "/config"
 ]
