--- a/files/config.php.tmpl
+++ b/files/config.php.tmpl
@@ -2,4 +2,14 @@
 {{range gets "/config/*"}}
   ${{base .Key}} = "{{.Value}}";
 {{end}}
+
+{{ range lsdir "/config" }}
+ {{ $Dir := . }}
+ {{ $Path := printf "/config/%s/*" $Dir}}
+# From {{ $Path }}
+  {{ range gets $Path}}
+${{ $Dir }}_{{base .Key}} = "{{.Value}}";
+ {{ end}}
+{{ end}}
+
 ?>
