--- a/files/config.sh.tmpl
+++ b/files/config.sh.tmpl
@@ -1,3 +1,12 @@
 {{range gets "/config/*"}}
 {{base .Key}}="{{.Value}}"
 {{end}}
+
+{{ range lsdir "/config" }}
+ {{ $Dir := . }}
+ {{ $Path := printf "/config/%s/*" $Dir}}
+# From {{ $Path }}
+  {{ range gets $Path}}
+{{ $Dir }}_{{base .Key}} = "{{.Value}}"
+ {{ end}}
+{{ end}}
